Move back-to-top button to the left to prevent overlap with WhatsApp FAB

--- a/style.css
+++ b/style.css
@@ -1644,7 +1644,7 @@ body.light-mode .mesh-bg {
 .back-to-top {
     position: fixed;
     bottom: 30px;
-    right: 30px;
+    left: 30px;
     width: 50px;
     height: 50px;
     border-radius: 50%;
